# C-ENCryptor

./: .dockerignore  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CmakeLists.txt  Dockerfile  LICENSE  README.md
demo/: CMakeLists.txt  README.md  demo.c
demo/data/encrypted/: encrypted_2_imgs.crypto  encrypted_bin01.crypto  encrypted_folder.crypto  encrypted_img01.crypto  encrypted_img02.crypto  encrypted_tx01.crypto
demo/data/raw_folder/fld01/: tx01.txt
demo/data/raw_folder/fld01/fld02/: bin01
include/: archive.h  archive_item.h  ceapi.h  constants.h  crypto.h  error_handle.h  locator.h  macros.h  util.h
include/C-ENCryptor/: archive.h  archive_item.h  constants.h  crypto.h  locator.h
src/: archive.c  archive_item.c  cipher.c  crypto.c  error_handle.c  locator.c  util.c
